<resources>
    <string name="app_name">SimpleLogin</string>
    <string name="simplelogin_scheme" translatable="false">auth.simplelogin</string>
    <string name="facebook_app_id">388804475105146</string>
    <string name="fb_login_protocol_scheme">fb388804475105146</string>
    <string name="google_web_client_id">1015607994815-spepahv667u0o9f17nie3f9vuddhgp1p.apps.googleusercontent.com</string>
    <string name="app_short_description">SimpleLogin is a open source solution to protect your online identity.\n\nSimpleLogin strives to offer a simple experience for both users and partners/developers.\n\nThis Android version is brought to you by SimpleLogin team &amp; Stjin (Stjin.host)</string>
    <string name="step_1">The next time a website asks for your email address, just create a new alias instead of using your real email.</string>
    <string name="step_2">All emails sent to an alias are forwarded to your \"real\" email address without the sender knowing anything.</string>
    <string name="step_3">On your desktop, you can install our browser extension to manage and quickly create aliases on the fly.\n\nOn your smartphone with SimpleLogin installed, whenever you need to register to a website, simply \"share\" the website you are visiting with SimpleLogin to quickly create an alias.</string>
    <string name="what_a">Subscribe to mailing lists, create new online accounts with email alias.\n\nAll emails sent to an alias will be <b>forwarded</b> to your personal inbox.\n\nLater on, simply block an alias if it\'s too spammy.</string>
    <string name="what_b">Just hit \"Reply\" whenever you need to reply to a forwarded email: the reply will come from the alias and your personal mailbox stays hidden.\n\nYou can also <u>send</u> emails to any email address from your alias.</string>
    <string name="what_c">Use alias as your <b>business email</b>.\n\nSave $6/month for each business email created with SimpleLogin.\n\nBy the way your company emails are actually aliases.</string>
    <string name="forgot_password_message">For security reason and to avoid database leak, all \"forgot password\" requests are taken into account silently without you being informed if a request is successful or not.\n\nSo make sure that you enter the correct email address.</string>
    <string name="create_alias_hint">💡Hint: To make it easy to remember for later use, it is a good practice to use the name of the website/service that you plan to register with alias.</string>
    <string name="create_alias_warning">Only lowercase letters, dots, numbers, dashes (-) and underscores (_) are currently supported.</string>
    <string name="api_key_explanation">To get your API key, you must sign in SimpleLogin by using a browser, then navigate to \"API Key\" tab, create one if not already then copy and paste the key here.</string>
    <string name="do_not_change_api_url"><b>DO NOT</b> change API URL unless you are hosting SimpleLogin with your own server.</string>
    <string name="default_api_url">The default value is <b>https://app.simplelogin.io</b></string>
    <string name="how_to_use_mailbox">
        A mailbox is simply another personal email address. When creating a new alias, you can choose which mailbox owns it. For example:\n
        - All emails sent to this alias will be forwarded to the selected mailbox.\n
        - From this mailbox, you can reply to or send emails using the alias.\n\n
        When you sign up, a mailbox is automatically created using your account\’s email address.\n\n
        A mailbox doesn\'t have to be your own email — it can be your friend\’s email if you\’d like to create aliases for them.
    </string>
    <string name="how_to_use_contacts">
        Follow these 2 simple steps:\n
        1. Create a contact by tapping the + button and entering the email address you want to send messages to.\n
        2. Tap on the contact to copy the reverse-alias or open your email app with the reverse-alias pre-filled.\n\n
        That\’s it! Send your email as usual to the reverse-alias — we\’ll handle the rest and make the magic happen.
    </string>
    <string name="how_to_use_contacts_warning">Note: Reverse-aliases can only be used by you, and only from the email address linked to your SimpleLogin account.</string>
    <string name="warning_before_deleting_alias">🛑 People/apps who used to contact you via this alias cannot reach you any more. This operation is irreversible. Please confirm.</string>
    <string name="warning_before_deleting_mailbox">🛑 All aliases associated with this mailbox will also be deleted. This operation is irreversible. Please confirm.</string>
    <string name="copy_reverse_alias_with_display_name">Copy reverse-alias (w/ display name)</string>
    <string name="copy_reverse_alias_without_display_name">Copy reverse-alias (w/o display name)</string>
    <string name="begin_composing_with_default_email">Begin composing with default email</string>
    <!-- Settings -->
    <string name="modify_profile">Modify profile</string>
    <string name="modify_profile_photo">Modify profile photo</string>
    <string name="upload_new_photo">Upload new photo</string>
    <string name="remove_profile_photo">Remove profile photo</string>
    <string name="modify_display_name">Modify display name</string>
    <string name="enter_new_display_name">Enter new display name</string>
    <string name="touch_id">Touch ID</string>
    <string name="touch_id_authentication">Touch ID Authentication</string>
    <string name="face_id">Face ID</string>
    <string name="face_id_authentication">Face ID Authentication</string>
    <string name="face_id_permission_explication">Please authenticate to activate %1$s authentication</string>
    <string name="authenticate_to_continue">Please authenticate to continue</string>
    <string name="authenticate_to_activate_or_deactivate">Please authenticate to %1$s %2$s</string>
    <string name="or_use_your_passcode">Or use your passcode</string>
    <string name="biometric_authentication_explication">Restrict unwanted access to your SimpleLogin account on this device</string>
    <string name="newsletter">Newsletter</string>
    <string name="newsletter_explication">We will occasionally send you emails with new feature announcements</string>
    <string name="random_alias">Random Alias</string>
    <string name="random_alias_explication">Change the way random aliases are generated by default</string>
    <string name="based_on_uuid">Based on UUID</string>
    <string name="based_on_random_words">Based on random words</string>
    <string name="domain_for_random_alias">Domain for random alias</string>
    <string name="select_default_domain">Select default domain</string>
    <string name="simplelogin_domain">SimpleLogin domain</string>
    <string name="your_domain">Your domain</string>
    <string name="choose_sender_address_format">Choose sender address format</string>
    <string name="sender_address_format">Sender Address Format</string>
    <string name="sender_address_format_explication">Configure how incoming emails are formatted</string>
    <string name="sender_address_format_example">John Doe who uses john.doe@example.com to send you an email, how would you like to format his email?</string>
    <string name="simple_login_logo">SimpleLogin logo</string>

    <!-- Proton -->
    <string name="proton_link_account">Connect with Proton</string>
    <string name="proton_unlink_account">Unlink Proton account</string>
    <string name="your_proton_account_has_been_linked">Your Proton account has been successfully linked</string>
    <string name="your_proton_account_has_been_unlinked">Your Proton account has been unlinked</string>
    <string name="connect_with_proton_info_text">You can connect your Proton and SimpleLogin accounts.\nYou can then quickly log in to your SimpleLogin account using the Proton one.\n\nIf you have Proton Unlimited, Business or Visionary, you can have SimpleLogin premium for free.</string>
    <string name="currently_linked_proton_account">Your account is currently linked to the Proton account %s</string>
    <string name="proton_unlink_account_confirmation_title">@string/proton_unlink_account</string>
    <string name="proton_unlink_account_confirmation_content">Do you really want to unlink your Proton account?</string>
    <string name="dialog_confirm_button">Confirm</string>
    <string name="dialog_cancel_button">Cancel</string>
</resources>
