<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp">

        <TextView
            style="@style/SlSettingsItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_address_format" />

        <TextView
            style="@style/SlSettingsItemSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sender_address_format_explication" />

        <TextView
            style="@style/SlSettingsItemSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sender_address_format_example" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SlTextInputDropdownStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#0000"
            app:boxStrokeWidth="0dp">

            <AutoCompleteTextView
                android:id="@+id/sender_address_format_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</layout>