<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/connectWithProtonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingVertical="16dp"
            android:text="@string/proton_link_account"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/protonMain"
            app:icon="@drawable/ic_proton_white"
            app:iconTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unlinkProtonAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingVertical="16dp"
            android:text="@string/proton_unlink_account"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:backgroundTint="@color/protonMain"
            app:icon="@drawable/ic_proton_white"
            app:iconTint="@android:color/white"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/connectWithProtonInfoText"
            style="@style/SlSettingsItemSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/connect_with_proton_info_text" />

        <TextView
            android:id="@+id/accountConnectedWithProtonText"
            style="@style/SlSettingsItemSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:visibility="gone" />

    </LinearLayout>
</layout>