<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_top_padding"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_chevron_left_24dp"
                app:title="The journey to a same inbox" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <!--Step A-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/card_shape_with_ripple"
                    android:padding="@dimen/margin_4">

                    <TextView
                        android:id="@+id/step1TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_padding"
                        android:text="1. Sign up and start creating aliases"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/step1TextView"
                        android:paddingStart="@dimen/card_view_padding"
                        android:paddingEnd="@dimen/card_view_padding"
                        android:paddingBottom="@dimen/card_view_padding"
                        android:text="@string/step_1"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorControlNormal" />

                </RelativeLayout>

                <!--Step B-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/card_shape_with_ripple"
                    android:padding="@dimen/margin_4">

                    <TextView
                        android:id="@+id/step2TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_padding"
                        android:text="2. Receive emails safely"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/step2TextView"
                        android:paddingStart="@dimen/card_view_padding"
                        android:paddingEnd="@dimen/card_view_padding"
                        android:paddingBottom="@dimen/card_view_padding"
                        android:text="@string/step_2"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorControlNormal" />

                </RelativeLayout>

                <!--Step C-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/card_shape_with_ripple"
                    android:padding="@dimen/margin_4">

                        <TextView
                            android:id="@+id/step3TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/card_view_padding"
                            android:text="3. Create aliases without leaving the browser"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/step3TextView"
                            android:paddingStart="@dimen/card_view_padding"
                            android:paddingEnd="@dimen/card_view_padding"
                            android:paddingBottom="@dimen/card_view_padding"
                            android:text="@string/step_3"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?attr/colorControlNormal" />

                    </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
