<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_top_padding"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_chevron_left_24dp"
                app:title="What you can do with aliases" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <!--What A-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/card_shape_with_ripple"
                    android:padding="@dimen/margin_4">

                    <TextView
                        android:id="@+id/stepATextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_padding"
                        android:text="A. Replace email by alias everywhere"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/stepAImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stepATextView"
                        android:src="@mipmap/what_a"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stepAImageView"
                        android:padding="@dimen/card_view_padding"
                        android:text="@string/what_a"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorControlNormal" />

                </RelativeLayout>

                <!--What B-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/card_shape_with_ripple"
                    android:padding="@dimen/margin_4">

                    <TextView
                        android:id="@+id/stepBTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_padding"
                        android:text="B. Send emails from alias"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/stepBImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stepBTextView"
                        android:src="@mipmap/what_b"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stepBImageView"
                        android:padding="@dimen/card_view_padding"
                        android:text="@string/what_b"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorControlNormal" />

                </RelativeLayout>

                <!--What C-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/card_shape_with_ripple"
                    android:padding="@dimen/margin_4">

                    <TextView
                        android:id="@+id/stepCTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_padding"
                        android:text="C. Run your business with alias"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/stepCImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stepCTextView"
                        android:src="@mipmap/what_c"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stepCImageView"
                        android:padding="@dimen/card_view_padding"
                        android:text="@string/what_c"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorControlNormal" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
